# metabase-embedding-rust-lambda

./: Cargo.toml  README.md
src/: main.rs
tests/: test.json
