[package]
name = "metabase"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.11.1"
jwt = "0.16.0"
tokio = { version = "1.37.0 ", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
